--- a/Minella/Spring-Batch-by-Michael-Minella/xmlFileOutput/docker-compose.yaml
+++ b/Minella/Spring-Batch-by-Michael-Minella/xmlFileOutput/docker-compose.yaml
@@ -1,5 +1,32 @@
-version: "3.0"
+
+version: '3'
 services:
- xml-file-output:
-  build: .
-  image: xml-file-output
+  mysql:
+    image: 'mysql:8.0.32'
+    restart: always
+    ports:
+      - '3306:3306'
+    environment:
+      MYSQL_DATABASE: test
+      MYSQL_PASSWORD: Password
+      MYSQL_ROOT_PASSWORD: Password
+    volumes:
+      - 'db_data:/var/lib/mysql'
+      
+
+  xmlfileoutput:
+    build: .
+    image: xmlfileoutput
+    container_name: xmlfileoutput
+    depends_on:
+     - mysql
+    ports:
+      - '8080:8080'
+    environment:
+      DB_HOST: 'mysql:3306'
+      DB_USER: root
+      DB_PASSWORD: Password
+      DB_NAME: test
+      
+volumes:
+  db_data: {}
