--- a/Minella/Spring-Batch-by-Michael-Minella/11-readingXML/src/main/resources/application.properties
+++ b/Minella/Spring-Batch-by-Michael-Minella/11-readingXML/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.url=jdbc:mysql://localhost:3306/test?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Password
 
 spring.batch.jdbc.initialize-schema=always
- 
+spring.batch.job.enabled=false
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
