--- a/Minella/Spring-Batch-by-Michael-Minella/00-hello-world/pom.xml
+++ b/Minella/Spring-Batch-by-Michael-Minella/00-hello-world/pom.xml
@@ -10,7 +10,7 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>hello-world</artifactId>
+	<artifactId>00-hello-world</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>hello-world</name>
