Read String Date and Convert to LocalDate

--- a/Minella/Spring-Batch-by-Michael-Minella/14-custom-date-read-csv/pom.xml
+++ b/Minella/Spring-Batch-by-Michael-Minella/14-custom-date-read-csv/pom.xml
@@ -5,11 +5,11 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.1</version>
+		<version>2.7.15</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>custom-date-read-csv</artifactId>
+	<artifactId>14-custom-date-read-csv</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>custom-date-read-csv</name>
 	<description>Demo project for Spring Boot</description>
