--- a/Minella/Spring-Batch-by-Michael-Minella/19-xmlFileOutput/pom.xml
+++ b/Minella/Spring-Batch-by-Michael-Minella/19-xmlFileOutput/pom.xml
@@ -6,11 +6,11 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.1</version>
+		<version>2.7.15</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>xmlFileOutput</artifactId>
+	<artifactId>19-xmlFileOutput</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>xmlFileOutput</name>
@@ -36,8 +36,8 @@
 		</dependency>
 	
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
@@ -70,6 +70,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-
 </project>
