--- a/Minella/Spring-Batch-by-Michael-Minella/19-xmlFileOutput/src/main/resources/application.properties
+++ b/Minella/Spring-Batch-by-Michael-Minella/19-xmlFileOutput/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://mysql:3306/test?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/test?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Password
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8InnoDBDialect
