--- a/Minella/Spring-Batch-by-Michael-Minella/20-writtingMultipleDestinations/src/main/resources/application.properties
+++ b/Minella/Spring-Batch-by-Michael-Minella/20-writtingMultipleDestinations/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://mysql:3306/test?createDatabaseIfNotExist=true&autoReconnect=true
+spring.datasource.url=jdbc:mysql://localhost:3306/test?createDatabaseIfNotExist=true&autoReconnect=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Password
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8InnoDBDialect
 
 spring.batch.jdbc.initialize-schema=always
