--- a/Minella/Spring-Batch-by-Michael-Minella/24-classifier-composite-item-processor-job/pom.xml
+++ b/Minella/Spring-Batch-by-Michael-Minella/24-classifier-composite-item-processor-job/pom.xml
@@ -5,11 +5,11 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.1</version>
+		<version>2.7.15</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>classifier-composite-item-processor-job</artifactId>
+	<artifactId>24-classifier-composite-item-processor-job</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>databaseOutput</name>
@@ -36,8 +36,8 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
