--- a/Minella/Spring-Batch-by-Michael-Minella/27-multiline-job/pom.xml
+++ b/Minella/Spring-Batch-by-Michael-Minella/27-multiline-job/pom.xml
@@ -6,11 +6,11 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.0</version>
+		<version>2.7.15</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>multiline-job</artifactId>
+	<artifactId>27-multiline-job</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>multiline-job</name>
 	<description>Demo project for Spring Boot</description>
