--- a/Minella/Spring-Batch-by-Michael-Minella/30-property-extracting-job/pom.xml
+++ b/Minella/Spring-Batch-by-Michael-Minella/30-property-extracting-job/pom.xml
@@ -5,12 +5,12 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.0</version>
+		<version>2.7.15</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	
 	<groupId>com.example</groupId>
-	<artifactId>property-extracting-job</artifactId>
+	<artifactId>30-property-extracting-job</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>property-extracting-job</name>
 	<description>Demo project for Spring Boot</description>
