--- a/Minella/Spring-Batch-by-Michael-Minella/32-spring-batch-xml-mongodb/pom.xml
+++ b/Minella/Spring-Batch-by-Michael-Minella/32-spring-batch-xml-mongodb/pom.xml
@@ -6,17 +6,17 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.0</version>
+		<version>2.7.15</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>spring-batch-mongodb</artifactId>
+	<artifactId>32-spring-batch-xml-mongodb</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>spring-batch-mongodb</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>11</java.version>
 		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 	</properties>
 
