--- a/Minella/Spring-Batch-by-Michael-Minella/33-subset-column-csv-read/pom.xml
+++ b/Minella/Spring-Batch-by-Michael-Minella/33-subset-column-csv-read/pom.xml
@@ -5,11 +5,11 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.0</version>
+		<version>2.7.15</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>subset-column-csv-read</artifactId>
+	<artifactId>33-subset-column-csv-read</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>subset-column-csv-read</name>
 	<description>Demo project for Spring Boot</description>
@@ -26,8 +26,8 @@
 			<artifactId>spring-boot-starter-batch</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
