--- a/Minella/Spring-Batch-by-Michael-Minella/xml-job/pom.xml
+++ b/Minella/Spring-Batch-by-Michael-Minella/xml-job/pom.xml
@@ -6,14 +6,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.1</version>
+		<version>2.7.15</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	
 	<groupId>com.example</groupId>
 	<artifactId>xml-to-csv</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>xml-job</name>
+	<name>37-xml-to-csv</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
