--- a/Minella/Spring-Batch-by-Michael-Minella/38-existing-service-job/pom.xml
+++ b/Minella/Spring-Batch-by-Michael-Minella/38-existing-service-job/pom.xml
@@ -5,11 +5,11 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.1</version>
+		<version>2.7.15</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>existing-service-job</artifactId>
+	<artifactId>38-existing-service-job</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>existing-service-job</name>
 	<description>Demo project for Spring Boot</description>
