--- a/Minella/Spring-Batch-by-Michael-Minella/48-asyncItemProcessorItemWriter/pom.xml
+++ b/Minella/Spring-Batch-by-Michael-Minella/48-asyncItemProcessorItemWriter/pom.xml
@@ -6,11 +6,11 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.0</version>
+		<version>2.7.15</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>asyncItemProcessorItemWriter</artifactId>
+	<artifactId>48-asyncItemProcessorItemWriter</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>asyncItemProcessorItemWriter</name>
@@ -40,8 +40,8 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
