--- a/Minella/Spring-Batch-by-Michael-Minella/59-accessing-execution-context-in-callback/src/main/resources/application.properties
+++ b/Minella/Spring-Batch-by-Michael-Minella/59-accessing-execution-context-in-callback/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/test?createDatabaseIfNotExist=true&autoReconnect=true
+#spring.datasource.username=root
+#spring.datasource.password=Password
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8InnoDBDialect
+#
+#spring.batch.jdbc.initialize-schema=always
+#spring.batch.job.enabled=false
+#
+#spring.sql.init.mode=always
+##spring.sql.init.data-locations=classpath:schema-mysql.sql, classpath:data-mysql.sql
