--- a/Minella/Spring-Batch-by-Michael-Minella/spring-boot-batch-pass-list-values-to-sql/src/main/resources/application.properties
+++ b/Minella/Spring-Batch-by-Michael-Minella/spring-boot-batch-pass-list-values-to-sql/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=spring-boot-batch-pass-list-values-to-sql
+# MYSQL DB Details
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.username=root
+spring.datasource.password=Password
+
+spring.batch.jdbc.initialize-schema=always
+
+spring.batch.job.enabled=false
