--- a/Minella/Spring-Batch-by-Michael-Minella/64-hashmap-reader-writer/.project
+++ b/Minella/Spring-Batch-by-Michael-Minella/64-hashmap-reader-writer/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>hashmap-reader-writer</name>
+	<name>64-hashmap-reader-writer</name>
 	<comment></comment>
 	<projects>
 	</projects>
