--- a/Minella/Spring-Batch-by-Michael-Minella/64-hashmap-reader-writer/pom.xml
+++ b/Minella/Spring-Batch-by-Michael-Minella/64-hashmap-reader-writer/pom.xml
@@ -5,25 +5,27 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.0</version>
+		<version>2.7.15</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>hashmap-reader-writer</artifactId>
+	<artifactId>64-hashmap-reader-writer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>hashmap-reader-writer</name>
 	<description>Demo project for Spring Boot</description>
+	
 	<properties>
 		<java.version>11</java.version>
 	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-batch</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
