--- a/Minella/Spring-Batch-by-Michael-Minella/caching-data/pom.xml
+++ b/Minella/Spring-Batch-by-Michael-Minella/caching-data/pom.xml
@@ -5,17 +5,19 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.0</version>
+		<version>2.7.15</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>caching-data</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>caching-data</name>
+	<name>65-caching-data</name>
 	<description>Demo project for Spring Boot</description>
+	
 	<properties>
 		<java.version>11</java.version>
 	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
