--- a/Minella/Spring-Batch-by-Michael-Minella/71-jpa-paging-job/src/main/resources/application.properties
+++ b/Minella/Spring-Batch-by-Michael-Minella/71-jpa-paging-job/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/test
+spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
 spring.datasource.password=Password
 spring.batch.jdbc.initialize-schema=always
