--- a/Minella/Spring-Batch-by-Michael-Minella/74-hibernate-paging-job/pom.xml
+++ b/Minella/Spring-Batch-by-Michael-Minella/74-hibernate-paging-job/pom.xml
@@ -6,11 +6,11 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.0</version>
+		<version>2.7.15</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>hibernate-paging-job</artifactId>
+	<artifactId>74-hibernate-paging-job</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>hibernate-paging-job</name>
 	<description>Demo project for Spring Boot</description>
@@ -30,8 +30,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
