--- a/Minella/Spring-Batch-by-Michael-Minella/80-item-writer-adapter/pom.xml
+++ b/Minella/Spring-Batch-by-Michael-Minella/80-item-writer-adapter/pom.xml
@@ -5,17 +5,19 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.2</version>
+		<version>2.7.15</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>multi-file-job</artifactId>
+	<artifactId>80-item-writer-adapter</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>multi-file-job</name>
+	<name>80-item-writer-adapter</name>
 	<description>Demo project for Spring Boot</description>
+	
 	<properties>
 		<java.version>11</java.version>
 	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
