--- a/Minella/Spring-Batch-by-Michael-Minella/94-skiplistener-demo/pom.xml
+++ b/Minella/Spring-Batch-by-Michael-Minella/94-skiplistener-demo/pom.xml
@@ -5,11 +5,11 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.0</version>
+		<version>2.7.15</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>skiplistener-demo</artifactId>
+	<artifactId>94-skiplistener-demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>skiplistener-demo</name>
 	<description>Demo project for Spring Boot</description>
@@ -28,8 +28,8 @@
 			<artifactId>spring-boot-starter-jdbc</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
