--- a/Minella/Spring-Batch-by-Michael-Minella/95-spring-batch-decider/pom.xml
+++ b/Minella/Spring-Batch-by-Michael-Minella/95-spring-batch-decider/pom.xml
@@ -5,11 +5,11 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.0</version>
+		<version>2.7.15</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>spring-batch-decider</artifactId>
+	<artifactId>95-spring-batch-decider</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>spring-batch-decider</name>
 	<description>Demo project for Spring Boot</description>
@@ -26,8 +26,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
