--- a/Minella/Spring-Batch-by-Michael-Minella/96-spring-batch-context-params/src/main/resources/application.properties
+++ b/Minella/Spring-Batch-by-Michael-Minella/96-spring-batch-context-params/src/main/resources/application.properties
@@ -13,4 +13,4 @@ spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.Im
 
 # Spring batch
 spring.batch.job.enabled=false
-spring.batch.initialize-schema=always
+spring.batch.jdbc.initialize-schema=always
