Classifier Composite Writer with Multiresource Item Writer

--- a/Minella/Spring-Batch-by-Michael-Minella/103-spring-batch-multiple-files-with-composite/pom.xml
+++ b/Minella/Spring-Batch-by-Michael-Minella/103-spring-batch-multiple-files-with-composite/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>s</artifactId>
+	<artifactId>103-classifier-composite-item-writer-with-Multiresource</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>read-flatfile-write-to-multiple-using-MultiResource-compositeWriter</name>
 	<description>Demo project for Spring Boot</description>
