--- a/Minella/Spring-Batch-by-Michael-Minella/104-spring-batch-partitioning/pom.xml
+++ b/Minella/Spring-Batch-by-Michael-Minella/104-spring-batch-partitioning/pom.xml
@@ -5,11 +5,11 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.0</version>
+		<version>2.7.15</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>spring-batch-partitioning</artifactId>
+	<artifactId>104-spring-batch-partitioning</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>spring-batch-partitioning</name>
 	<description>Demo project for Spring Boot</description>
@@ -32,8 +32,8 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
